--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
     "ollama": "^0.5.15",
+    "puppeteer": "^24.8.1",
     "readline-sync": "^1.4.10"
   }
 }
